# relatorio_365

./: .dockerignore  .env.example  .gitignore  Blocktime_3fbf7ab0_QmxvY2t0.cer  Dockerfile  docker-compose.yaml  modelo_clientes.xlsx  modelo_clientes_v2.xlsx  pyproject.toml  requirements.txt  update-app.sh
.github/workflows/: docker-image.yml
docker/: docker-compose.yml
ks8/: 00-namespace.yml  01-secret.yaml  02-mysql-pvc.yaml  03-mysql-statefulset.yaml  04-mysql-service.yml  05-cronjob.yaml
migrations/: env.py
migrations/versions/: 455413fadd7b_add_recipient_fields_to_customers.py  63e18650d143_add_razao_social_cnpj_to_customers.py  a1b2c3d4e5f6_add_sharepoint_cert_fields.py  e23b4fff1264_create_customers_table.py
src/: findings.py  main.py
src/cli/: __init__.py  __main__.py
src/collectors/: base.py
src/collectors/exchange/: collector.py
src/collectors/groups/: collector.py
src/collectors/licenses/: collector.py
src/collectors/mail_forwarding/: collector.py
src/collectors/mfa/: collector.py
src/collectors/sharepoint/: collector.py  quota_collector.py
src/core/: bootstrap.py  cert_manager.py  security.py
src/core/config/: constants.py  environments.py  settings.py
src/core/database/: __init__.py
src/core/exceptions/: base.py  customer.py  exchange.py  graph.py  report.py  sharepoint.py  storage.py
src/core/logging/: formatters.py  logger.py
src/customer/: customer_import.py  customer_repository.py  customer_service.py  models.py  orm.py  validators.py
src/report_engine/: engine.py  findings.py  report_service.py  ticket_dispatch.py
(+12 files in other folders)
