[project]
name = "office-365-reports"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert-J-Barros",email = "robert.junior.barros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "weasyprint (>=69.0,<70.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pymysql (>=1.2.0,<2.0.0)",
    "cryptography (>=48.0.0,<49.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[project.scripts]
o365-reports = "main:main"
o365-cli = "cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "*", from = "src" }]
